--- a/styles/styles.css
+++ b/styles/styles.css
@@ -598,9 +598,9 @@ header {
     display: none;
   }
 }
-@media (max-width: 320px) {
+@media (max-width: 330px) {
   .navbar #toggle:checked ~ .nav {
-    top: 180px;
+    top: 150px;
   }
 }
 .services {
